@@ -21,7 +21,7 @@ and so no generalised command format can be given.
 The format of this option is:
 .LP
 .nf
-.B axparms --assoc <callsign> <username>
+.B axparms --assoc <callsign> <username|uid>
 .br
 .B axparms --assoc <callsign> delete
 .br
